--- a/package.json
+++ b/package.json
@@ -2,31 +2,35 @@
   "name": "reveal-md-server",
   "version": "1.0.0",
   "description": "Markdown to Reveal.js presentation server",
-  "homepage": "http://revealjs.com",
-  "subdomain": "revealjs",
+  "homepage": "https://reveal-md.herokuapp.com",
   "main": "js/reveal.js",
   "scripts": {
+    "start": "npm run reveal:serve",
     "test": "grunt test",
-    "start": "grunt serve",
+    "reveal:serve": "grunt serve",
     "build": "grunt"
   },
   "author": {
-    "name": "Hakim El Hattab",
-    "email": "hakim.elhattab@gmail.com",
-    "web": "http://hakim.se"
+    "name": "Pacharapol Withayasakpunt",
+    "email": "patarapolw@gmail.com",
+    "web": "https://polvcode.dev"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/hakimel/reveal.js.git"
+    "url": "git://github.com/patarapolw/reveal-md-server.git"
   },
   "engines": {
     "node": ">=9.0.0"
   },
-  "devDependencies": {
+  "dependencies": {
+    "@types/express": "^4.17.0",
+    "concurrently": "^4.1.1",
+    "css-loader": "^3.1.0",
     "express": "^4.16.2",
+    "file-loader": "^4.1.0",
     "grunt": "^1.0.4",
-    "grunt-cli": "^1.3.2",
     "grunt-autoprefixer": "^3.0.4",
+    "grunt-cli": "^1.3.2",
     "grunt-contrib-connect": "^2.0.0",
     "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-jshint": "^2.0.0",
@@ -35,10 +39,19 @@
     "grunt-contrib-watch": "^1.1.0",
     "grunt-sass": "^3.0.2",
     "grunt-zip": "~0.17.1",
+    "http-proxy-middleware": "^0.19.1",
     "load-grunt-tasks": "^4.0.0",
-    "node-sass": "^4.11.0",
     "mustache": "^2.3.0",
-    "socket.io": "^2.2.0"
+    "node-sass": "^4.11.0",
+    "socket.io": "^2.2.0",
+    "style-loader": "^0.23.1",
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.3"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
+  }
 }
