--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "npm run reveal:serve",
     "test": "grunt test",
     "reveal:serve": "grunt serve",
-    "build": "grunt"
+    "reveal:build": "grunt",
+    "js:serve": "webpack -w --config webpack.dev.js",
+    "js:build": "webpack --config webpack.prod.js",
+    "build": "npm run js:build"
   },
   "author": {
     "name": "Pacharapol Withayasakpunt",
@@ -28,6 +31,7 @@
     "css-loader": "^3.1.0",
     "express": "^4.16.2",
     "file-loader": "^4.1.0",
+    "gray-matter": "^4.0.2",
     "grunt": "^1.0.4",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-cli": "^1.3.2",
