--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "moduleResolution": "node",
         "target": "es6",
         "allowJs": true,
-        "lib": ["es2015"],
+        "lib": ["es2015", "dom"],
         "allowSyntheticDefaultImports": true
     },
     "include": [
