--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "description": "Markdown to Reveal.js presentation server",
   "homepage": "https://reveal-md.herokuapp.com",
-  "main": "js/reveal.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "npm run reveal:serve",
+    "start": "node .",
     "test": "grunt test",
     "reveal:serve": "grunt serve",
     "reveal:build": "grunt",
     "js:serve": "webpack -w --config webpack.dev.js",
     "js:build": "webpack --config webpack.prod.js",
-    "build": "npm run js:build"
+    "build": "npm run reveal:build && npm run js:build"
   },
   "author": {
     "name": "Pacharapol Withayasakpunt",
@@ -27,7 +27,6 @@
   },
   "dependencies": {
     "@types/express": "^4.17.0",
-    "concurrently": "^4.1.1",
     "css-loader": "^3.1.0",
     "express": "^4.16.2",
     "file-loader": "^4.1.0",
@@ -46,6 +45,7 @@
     "http-proxy-middleware": "^0.19.1",
     "load-grunt-tasks": "^4.0.0",
     "mustache": "^2.3.0",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.11.0",
     "socket.io": "^2.2.0",
     "style-loader": "^0.23.1",
