--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@types/express": "^4.17.0",
     "css-loader": "^3.1.0",
+    "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
     "express": "^4.16.2",
     "file-loader": "^4.1.0",
