--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "outDir": "./js/",
+        "outDir": "./build/",
         "sourceMap": true,
         "strict": true,
         "noImplicitReturns": true,
