upload to netlify

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,7 +14,7 @@
     "@types/codemirror": "0.0.94",
     "@types/js-yaml": "^3.12.4",
     "@types/markdown-it": "^10.0.1",
-    "ajv": "^6.12.2",
+    "@types/shortid": "0.0.29",
     "any-serialize": "^1.4.12",
     "codemirror": "^5.54.0",
     "core-js": "^3.6.4",
@@ -31,6 +31,7 @@
     "markdown-it-container": "^2.0.0",
     "markdown-it-emoji": "^1.4.0",
     "markdown-it-imsize": "^2.0.1",
+    "shortid": "^2.2.15",
     "stylis": "^3.5.4",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
@@ -45,6 +46,8 @@
     "@vue/cli-plugin-typescript": "~4.3.0",
     "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "typescript": "~3.8.3",
