--- a/package.json
+++ b/package.json
@@ -1,32 +1,71 @@
 {
   "name": "reveal-md-server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('You must use Yarn to install, not NPM')\"",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.ts",
+    "build": "nuxt-ts build && nuxt-ts export",
+    "start": "cross-env NODE_ENV=production ts-node -O '{\"module\":\"commonjs\"}' server/index.ts",
+    "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/patarapolw/reveal-md-server.git"
+  "dependencies": {
+    "@nuxt/typescript-runtime": "^0.4.10",
+    "@nuxtjs/axios": "^5.11.0",
+    "@patarapolw/make-html-frontend-functions": "^1.0.0-pre13",
+    "@patarapolw/make-html-functions": "^1.0.0-pre8",
+    "@patarapolw/reveal-md-core": "^1.1.0",
+    "@types/codemirror": "^0.0.96",
+    "@types/fs-extra": "^9.0.1",
+    "@types/js-yaml": "^3.12.5",
+    "any-serialize": "^1.4.12",
+    "codemirror": "^5.55.0",
+    "dayjs": "^1.8.28",
+    "fastify": "^2.15.0",
+    "fastify-cors": "^3.0.3",
+    "fastify-file-upload": "^2.0.1",
+    "fastify-static": "^2.7.0",
+    "fs-extra": "^9.0.1",
+    "htmlparser2": "^4.1.0",
+    "incremental-dom": "^0.7.0",
+    "js-yaml": "^3.14.0",
+    "nuxt": "^2.13.0",
+    "sanitize-filename": "^1.6.3",
+    "sweetalert2": "^9.15.2",
+    "vue-codemirror": "^4.0.6",
+    "zod": "^1.7.1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/patarapolw/reveal-md-server/issues"
-  },
-  "homepage": "https://github.com/patarapolw/reveal-md-server#readme",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "eslint": "^7.0.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^6.2.2",
-    "typescript": "^3.9.3"
+    "@nuxt/typescript-build": "^1.0.3",
+    "@nuxtjs/eslint-config": "^3.0.0",
+    "@nuxtjs/eslint-config-typescript": "^2.0.0",
+    "@nuxtjs/eslint-module": "^2.0.0",
+    "babel-eslint": "^10.1.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-nuxt": "^1.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
+    "eslint-plugin-vue-a11y": "^0.0.31",
+    "nodemon": "^2.0.4",
+    "nuxt-property-decorator": "^2.7.2",
+    "prettier": "^2.0.5",
+    "ts-node": "^8.10.2",
+    "typescript": "~3.8"
+  },
+  "engines": {
+    "node": "12.x",
+    "npm": "please-use-yarn",
+    "yarn": "1.x"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "server/"
+    ],
+    "execMap": {
+      "ts": "ts-node -O '{\"module\":\"commonjs\"}'"
+    },
+    "ext": "ts,js,json"
   }
 }
